--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-pydantic==2.9.0
-python-dotenv==1.0.1
 pyodbc==5.1.0
+python-multipart==0.0.9
+fpdf2==2.7.9
 reportlab==4.2.2
 Jinja2==3.1.4
