--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,19 @@
-version: "3.9"
 services:
   api:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    env_file:
-      - ./backend/.env.docker
-    volumes:
-      - api_storage:/app/storage
-    ports:
-      - "8001:8001"
+    env_file: [./backend/.env.docker]
+    ports: ["8001:8001"]
+    volumes: ["api_storage:/app/storage"]
     command: uvicorn app.main:app --host 0.0.0.0 --port 8001
-    networks: [appnet]
+
   web:
     build:
-      context: ./frontend
+      context: .
+      dockerfile: frontend/Dockerfile
+    ports: ["8080:80"]
     depends_on: [api]
-    ports:
-      - "8080:80"
-    networks: [appnet]
-networks: { appnet: {} }
-volumes: { api_storage: {} }
+
+volumes:
+  api_storage: {}
