--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,8 @@ FROM node:20-alpine AS build
 WORKDIR /app
 COPY frontend/package*.json ./
 RUN npm install --legacy-peer-deps \
- && npm i -D vite @vitejs/plugin-react typescript --legacy-peer-deps
+ && npm i -D vite @vitejs/plugin-react typescript --legacy-peer-deps \
+ && npm i bootstrap@5.3.8
 COPY frontend /app
 RUN npm run build
 
