Przerobienie na SQL alchemy głównych routerów, dodanie TopBar, dodanie obsługi zdjęć do pozycji protokołu

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       dockerfile: frontend/Dockerfile
     ports: ["8080:80"]
     depends_on: [api]
+    volumes:
+      - api_storage:/var/www/static/storage:ro
 
 volumes:
   api_storage: {}
