--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,9 @@ RUN npm install --legacy-peer-deps \
  && npm i -D vite @vitejs/plugin-react typescript --legacy-peer-deps \
  && npm i bootstrap@5.3.8 \
  && npm i react-bootstrap bootstrap \
+ && npm i react-bootstrap-icons \
  && npm i react-hot-toast
+
 COPY frontend /app
 RUN npm run build
 
