--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
   server_name _;
   root /usr/share/nginx/html;
   index index.html;
-
+  client_max_body_size 100M;
   location /api/ {
     proxy_pass http://api:8001/api/;
     proxy_set_header Host $host;
@@ -11,6 +11,12 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
+
+  location /storage/ {
+        alias /var/www/static/storage/;
+        
+        expires 1d; 
+    }
 
   location / {
     try_files $uri /index.html;
