refresh token added

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,6 +5,9 @@ server {
   index index.html;
   client_max_body_size 100M;
   location /api/ {
+    proxy_buffer_size       32k;
+    proxy_buffers           4 64k;  # 4 bufory po 64k = 256k
+    proxy_busy_buffers_size 64k;
     proxy_pass http://api:8001/api/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
